--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for You ♡</p>
+      <p>♡ Letter for Sejal ♡</p>
     </div>
 
     <!-- Letter Screen -->
     <div id="letter-container">
       <div class="letter-window">
-        <h1 id="letter-title">Will you be my Valentine?</h1>
+        <h1 id="letter-title">Will you be my Valentine Gunnu?</h1>
 
         <img src="cat_heart.gif" class="cat" id="letter-cat" />
 
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Valentine Date:</strong> MVSR canteen 😘 dress fancy
         </p>
       </div>
     </div>
