--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> MVSR canteen 😘 dress fancy
+          <strong>Date Spot:</strong> MVSR canteen 😘 I'll pay dw
         </p>
       </div>
     </div>
