--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Date Spot:</strong> MVSR canteen 😘 I'll pay dw
+          <strong>I would do a backflip rn</strong> if i knew how🥀
         </p>
       </div>
     </div>
