--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>I would do a backflip rn</strong> if i knew how🥀
+          <strong>Hi gf ❤️</strong> I hope we always stay like this
         </p>
       </div>
     </div>
